--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-<head>
-    <meta charset="UTF-8">
-    <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="sketch.js"></script>
-    <style>
-        html {
-            text-align: center;
-        }
-        body {
-            padding: 0;
-            margin: 50px;
-        }
-    </style>
-
-
-</head>
-
-<body>
-</body>
-
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  </body>
 </html>
